# photobooth

./: .gitignore  CLAUDE.md  README.md  app.py  camera.py  create_sample_backgrounds.py  index.css  index.js  models.py  pyproject.toml  qr_generator.py  setup-pi.sh  sql_test.py  themes.py  uploader.py
pi_app/: .env.example  .gitignore  CLAUDE.md  app.py  backgrounds.py  camera.py  event.json  label.json  models.py  pyproject.toml  qr_generator.py  themes.py  uploader.py
pi_app/static/css/: admin.css  gallery.css  index.css  live-show.css  main.css  photos.css
pi_app/static/js/: admin.js  gallery.js  index.js
pi_app/templates/: admin.html  gallery.html  index.html  live-show.html  photos.html
pi_app/templates/data/: event.json  label.json  photos.json  qr_url.json  ui_theme.json
share_site/: .env.example  .gitignore  CLAUDE.md  app.py  pyproject.toml  render.yaml
share_site/templates/: 404.html  photo.html
static/css/: admin.css  gallery.css  index.css  live-show.css  main.css  photos.css
static/js/: admin.js  gallery.js  index.js
templates/: admin.html  gallery.html  index.html  live-show.html  photo.html
templates/data/: event.json  label.json  photos.json
