[project]
name = "pi-app"
version = "0.1.0"
description = "Raspberry Pi photobooth — camera controller, R2 uploader, QR display"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "boto3>=1.34",
    "qrcode[pil]>=7.4",
    "opencv-python-headless>=4.8",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "rembg[cpu]>=2.0",
    "numpy<2.4",
]

[tool.uv]
package = false
# picamera2 and gpiozero are installed via apt (system packages), not uv.
# After `uv sync` on a Pi, expose them to the venv with:
#   echo "/usr/lib/python3/dist-packages" > .venv/lib/python3.13/site-packages/system-dist-packages.pth
