[project]
name = "pi-app"
version = "0.1.0"
description = "Raspberry Pi photobooth — camera controller, R2 uploader, QR display"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "pillow>=10.0",
    "boto3>=1.34",
    "qrcode[pil]>=7.4",
    "opencv-python-headless>=4.8",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",
    "rembg[cpu]>=2.0; sys_platform == 'linux'",
]

[tool.uv]
package = false
